--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@
     cursor: pointer;
 }
 
+
+.min-vh-100 {
+  min-height: 100vh;
+}
+
+.is-flex-grow-1 {
+  flex-grow: 1;
+}
+
 html, body {
     height: 100%;
     margin: 0;
