Mild mannered update

--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-#page {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-}
-
 .ant{
     position: absolute;
     height: 1vh;
@@ -23,14 +16,12 @@
     cursor: pointer;
 }
 
-
-.min-vh-100 {
-  min-height: 100vh;
-}
-
-.is-flex-grow-1 {
-  flex-grow: 1;
-}
+.modal-card.card {
+    width: 400px; /* Set card width */
+    height: 600px; /* Set card height */
+    border-radius: 3%;
+    overflow: auto; /* Ensure scrolling for content overflow */
+  }
 
 html, body {
     height: 100%;
